--- a/calendar/sass/styles.css
+++ b/calendar/sass/styles.css
@@ -5,7 +5,8 @@
 html {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   scroll-behavior: smooth;
   font-size: 16px;
 }
@@ -13,7 +14,8 @@ html {
 body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 1rem;
@@ -25,7 +27,8 @@ body {
 *::before {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   font-family: var(--epilogue);
 }
 
@@ -44,9 +47,16 @@ img {
 
 /* site styles */
 .calendar-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   min-width: 280px;
   width: 40vw;
   margin: 1rem auto;
@@ -54,12 +64,20 @@ img {
 }
 
 form {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   width: 80%;
   margin: 1rem 0;
 }
+
 form * {
   width: 100%;
   margin-top: 1rem;
@@ -68,8 +86,9 @@ form * {
   border-radius: 5px;
   padding: 0.5rem;
 }
-form input[type=submit] {
-  background-color: rgb(80, 115, 230);
+
+form input[type="submit"] {
+  background-color: #5073e6;
   color: #fff;
 }
 
@@ -83,28 +102,34 @@ main {
 }
 
 .event-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-bottom: 1rem;
   padding: 1rem;
   background-color: #fff;
   border: thin solid #000;
   border-radius: 5px;
 }
+
 .event-card button {
   font-size: 1rem;
-  background-color: rgb(250, 35, 35);
+  background-color: #fa2323;
   color: #fff;
   border: none;
   padding: 0.5rem;
   border-radius: 5px;
 }
+
 .event-card p span:first-child {
   display: block;
   text-align: center;
   font-size: 1.5rem;
   font-weight: bold;
 }
-
-/*# sourceMappingURL=styles.css.map */
