--- a/pomodoro/sass/styles.css
+++ b/pomodoro/sass/styles.css
@@ -6,7 +6,8 @@
 html {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   scroll-behavior: smooth;
   font-size: 16px;
 }
@@ -14,7 +15,8 @@ html {
 body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   max-width: 1200px;
   background-color: var(--main-color);
 }
@@ -24,7 +26,8 @@ body {
 *::before {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 a {
@@ -41,34 +44,51 @@ img {
 
 /*styles*/
 #main {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   width: 80%;
   margin: 1rem auto 0;
   padding: 1rem;
   background-color: #fff;
 }
+
 #main * {
   margin: 0.25rem;
 }
+
 #main span {
   font-size: calc(2rem + 0.25vw);
   font-weight: bold;
 }
 
 .inputs {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 100%;
 }
-.inputs input[type=text] {
+
+.inputs input[type="text"] {
   width: 70%;
   padding: 0.25rem;
   font-size: calc(0.75rem + 1.5vw);
 }
-.inputs input[type=submit] {
+
+.inputs input[type="submit"] {
   width: auto;
   background-color: var(--second-color);
   color: #fff;
@@ -83,6 +103,7 @@ img {
   width: 100%;
   padding-top: 2rem;
 }
+
 .activitys h2 {
   text-align: center;
 }
@@ -92,11 +113,21 @@ img {
   color: #b13737;
   text-align: center;
   text-decoration: underline;
-  animation: display 0.4s ease-in;
+  -webkit-animation: display 0.4s ease-in;
+          animation: display 0.4s ease-in;
 }
 
 .none {
   display: none;
+}
+
+@-webkit-keyframes display {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 @keyframes display {
@@ -107,11 +138,17 @@ img {
     opacity: 1;
   }
 }
+
 .task-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-size: 1.5rem;
 }
+
 .task-section #btn {
   background-color: var(--main-color);
   padding: 0.25rem;
@@ -120,5 +157,3 @@ img {
   border-radius: 5px;
   cursor: pointer;
 }
-
-/*# sourceMappingURL=styles.css.map */
