--- a/tiempo/sass/styles.scss
+++ b/tiempo/sass/styles.scss
@@ -40,9 +40,13 @@ body {
 a {
   text-decoration: none;
   color: var(--white-blue);
-}
-a:hover {
-  text-decoration: underline;
+  &:hover {
+    font-weight: bold;
+    text-decoration: underline;
+  }
+  &:visited {
+    color: rgb(218, 75, 9);
+  }
 }
 
 button {
@@ -221,6 +225,13 @@ textarea {
     border-radius: 5px;
     padding: 0.5rem;
   }
+}
+
+footer {
+  font-size: 1.25rem;
+  text-align: center;
+  font-weight: bold;
+  padding: 0.5rem;
 }
 
 .hamburger {
