--- a/calendar/sass/styles.scss
+++ b/calendar/sass/styles.scss
@@ -55,6 +55,8 @@ img {
   width: 40vw;
   margin: 1rem auto;
   background-color: #fff;
+  border-radius: 10px;
+  padding: 1rem 0;
 }
 
 form {
@@ -86,6 +88,7 @@ main {
   margin: 0 auto;
   padding: 1rem;
   background-color: #fff;
+  border-radius: 10px;
 }
 
 .event-card {
